Port Voxy 0.2.14 to Forge 1.19.2
Backport the complete Voxy renderer, world ingestion, model bakery and persistence stack to Minecraft 1.19.2, Forge 43.5.2 and Java 17. Replace Fabric lifecycle and configuration integration with Forge equivalents, target the validated Embeddium renderer build, preserve stable data layouts with parity tests, and validate the final installed JarJar artifact through renderer, persistence and restart smoke tests.